; ModuleID = '/home/carl/AnghaBench/git/extr_run-command.c_pp_output.c'
source_filename = "/home/carl/AnghaBench/git/extr_run-command.c_pp_output.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.parallel_processes = type { i32, %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i64, %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i64 }

@GIT_CP_WORKING = common dso_local global i64 0, align 8
@stderr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.parallel_processes*)* @pp_output to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pp_output(%struct.parallel_processes* %0) #0 {
  %2 = alloca %struct.parallel_processes*, align 8
  %3 = alloca i32, align 4
  store %struct.parallel_processes* %0, %struct.parallel_processes** %2, align 8
  %4 = load %struct.parallel_processes*, %struct.parallel_processes** %2, align 8
  %5 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 8
  store i32 %6, i32* %3, align 4
  %7 = load %struct.parallel_processes*, %struct.parallel_processes** %2, align 8
  %8 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %7, i32 0, i32 1
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** %8, align 8
  %10 = load i32, i32* %3, align 4
  %11 = sext i32 %10 to i64
  %12 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i64 %11
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @GIT_CP_WORKING, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %46

17:                                               ; preds = %1
  %18 = load %struct.parallel_processes*, %struct.parallel_processes** %2, align 8
  %19 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %18, i32 0, i32 1
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %19, align 8
  %21 = load i32, i32* %3, align 4
  %22 = sext i32 %21 to i64
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  %25 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %46

28:                                               ; preds = %17
  %29 = load %struct.parallel_processes*, %struct.parallel_processes** %2, align 8
  %30 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %29, i32 0, i32 1
  %31 = load %struct.TYPE_4__*, %struct.TYPE_4__** %30, align 8
  %32 = load i32, i32* %3, align 4
  %33 = sext i32 %32 to i64
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i64 %33
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  %36 = load i32, i32* @stderr, align 4
  %37 = call i32 @strbuf_write(%struct.TYPE_5__* %35, i32 %36)
  %38 = load %struct.parallel_processes*, %struct.parallel_processes** %2, align 8
  %39 = getelementptr inbounds %struct.parallel_processes, %struct.parallel_processes* %38, i32 0, i32 1
  %40 = load %struct.TYPE_4__*, %struct.TYPE_4__** %39, align 8
  %41 = load i32, i32* %3, align 4
  %42 = sext i32 %41 to i64
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %40, i64 %42
  %44 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %43, i32 0, i32 1
  %45 = call i32 @strbuf_reset(%struct.TYPE_5__* %44)
  br label %46

46:                                               ; preds = %28, %17, %1
  ret void
}

declare dso_local i32 @strbuf_write(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @strbuf_reset(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
